--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -8,8 +8,47 @@
     <title>Jan Marek</title>
   </head>
   <body>
-    <div class="bg-red-700" id="app">
+    <div id="name" class="bg-red-700 text-center font-bebas-neue text-4xl p-2">
       Jan Marek
     </div>
+    <h1 class="font-bebas-neue text-center text-6xl">
+      ODVAHA KE ZMĚNĚ!
+    </h1>
+    <p class="font-roboto text-center">
+      Víme co máme dělat, abychom byli úspěšnou zemí.
+    </p>
+      <p class="font-roboto text-center">
+      Vše co potřebujeme, je odvaha ke změně.
+    </p>
+    <h2 class="font-bebas-neue text-center text-5xl">
+      MLADÝ. TVRDÝ. S TAHEM NA BRANKU.
+    </h2>
+    <h2 class="font-bebas-neue text-center text-5xl">
+      TAK AKORÁT PRAGMATICKÝ, ABY NĚCO OPRAVDU PROSADIL.
+    </h2>
+    <h2 class="font-bebas-neue text-center text-5xl">
+      TAK AKORÁT IDEALISTICKÝ, ABY NEZAPOMNĚL ODKUD PŘIŠEL A PRO KOHO TO DĚLÁ.
+    </h2>
+    <h3 class="font-bebas-neue text-left text-5xl">
+      ZA CO BUDU BOJOVAT?
+    </h3>
+    <div id="tiles" class="flex items-center grid-cols-4">
+      <div id="col-1" class="">
+        Moderní antimonopolní zákony
+      </div>
+      <div id="col-2" class="">
+        Přesčasy bez daně
+      </div>
+      <div id="col-3" class="">
+        Školství pro měnící se svět
+      </div>
+      <div id="col-4" class="">
+        Dostupnější bydlení
+      </div>
+
+    </div>
+        <h3 class="font-bebas-neue text-left text-5xl">
+      KDO JSEM?
+    </h3>
   </body>
 </html>
