text + logo added

--- a/index.html
+++ b/index.html
@@ -45,10 +45,34 @@
       <div id="col-4" class="">
         Dostupnější bydlení
       </div>
-
     </div>
+      <div class="flex grid-cols-2">
         <h3 class="font-bebas-neue text-left text-5xl">
-      KDO JSEM?
-    </h3>
+          KDO JSEM?
+        </h3>
+        <div id="roll-out" class="flex grid-rows-3">
+          <div id="row-1" class="">
+            Co mě žene?
+          </di>
+          <div id="row-2" class="">
+            Životopis ve zkratce
+          </di>
+          <div id="row-3" class="">
+            Magické číslo 4000
+          </di>
+        </div>
+      </div>
+
   </body>
+  <footer>
+    <div id="authors" class="flex grid-cols-2 items-center justify-between">
+      <div class="">
+        pavlinaroznik
+      </div>
+      <div class="">
+        Zadavatel/zpracovatel: Piráti
+      </div>
+    </div>
+    <img src="./public/logo_inverse.png" alt="logo pirati" class="size-4">
+  </footer>
 </html>
