--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jan Marek</title>
   </head>
-  <body>
-    <div id="name" class="bg-red-700 text-center font-bebas-neue text-4xl p-2">
+  <body class="w-full h-full flex flex-col bg-primary">
+    <div id="name" class="bg-secondary text-center font-bebas-neue text-4xl p-2">
       Jan Marek
     </div>
+    <img class="w-[550px]" src="/letak-final.png" alt="political leaflet of a man standing">
     <h1 class="font-bebas-neue text-center text-6xl">
       ODVAHA KE ZMĚNĚ!
     </h1>
@@ -73,6 +74,6 @@
         Zadavatel/zpracovatel: Piráti
       </div>
     </div>
-    <img src="./public/logo_inverse.png" alt="logo pirati" class="size-4">
+    <img src="/logo_inverse.png" alt="logo pirati" class="size-15">
   </footer>
 </html>
