video + tiles bg added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <div id="name" class="bg-secondary text-center font-bebas-neue text-4xl p-2 text-black">
       Jan Marek
     </div>
+    <div class="flex justify-center items-center w-full h-full bg-black">
+      <video controls poster="/video-snap.png" width="960" height="720" controlsList="nodownload">
+        <source src="video.mp4" type="video/mp4">
+      </video>
+    </div>
     <div class="flex justify-center m-4">
       <img class="w-[550px]" src="/letak-final.png" alt="political leaflet of a man standing">
     </div>
@@ -36,16 +41,16 @@
       ZA CO BUDU BOJOVAT?
     </h3>
     <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-items-center text-center m-4">
-      <div id="col-1" class="">
+      <div id="col-1" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 p-10 bg-gradient-to-r from-tertiary to-secondary">
         Moderní antimonopolní zákony
       </div>
-      <div id="col-2" class="">
+      <div id="col-2" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 p-10 bg-gradient-to-r from-tertiary to-secondary">
         Přesčasy bez daně
       </div>
-      <div id="col-3" class="">
+      <div id="col-3" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 p-10 bg-gradient-to-r from-tertiary to-secondary">
         Školství pro měnící se svět
       </div>
-      <div id="col-4" class="">
+      <div id="col-4" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 p-10 bg-gradient-to-r from-tertiary to-secondary">
         Dostupnější bydlení
       </div>
     </div>
