--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h3 class="font-bebas-neue text-left text-5xl m-4">
       ZA CO BUDU BOJOVAT?
     </h3>
-    <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-items-center text-center m-4">
+    <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-items-center text-left m-4">
       <div id="col-1" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 p-10 bg-gradient-to-r from-tertiary to-secondary">
         Moderní antimonopolní zákony
       </div>
@@ -58,7 +58,7 @@
         <h3 class="font-bebas-neue text-left text-5xl">
           KDO JSEM?
         </h3>
-        <div id="roll-out" class="grid grid-cols-1 m-4">
+        <div id="drop-down" class="grid grid-cols-1 m-4">
           <div id="row-1" class="">
             Co mě žene?
           </div>
@@ -85,4 +85,5 @@
       </div>
     </div>
   </footer>
+  <script src="src/"></script>
 </html>
