faq new centered tiles

--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@
     <h3 class="font-bebas-neue text-left text-5xl m-4">
       ZA CO BUDU BOJOVAT?
     </h3>
-    <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-items-center text-left m-4">
-      <div id="col-1" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 p-10 bg-gradient-to-r from-tertiary to-secondary">
+    <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4">
+      <div id="col-1" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Moderní antimonopolní zákony
       </div>
-      <div id="col-2" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 p-10 bg-gradient-to-r from-tertiary to-secondary">
+      <div id="col-2" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Přesčasy bez daně
       </div>
-      <div id="col-3" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 p-10 bg-gradient-to-r from-tertiary to-secondary">
+      <div id="col-3" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Školství pro měnící se svět
       </div>
-      <div id="col-4" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 p-10 bg-gradient-to-r from-tertiary to-secondary">
+      <div id="col-4" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Dostupnější bydlení
       </div>
     </div>
-      <div id="faq" class="flex grid-cols-2 justify-center m-4">
-        <h3 class="font-bebas-neue text-left text-5xl">
+      <div id="faq" class="flex justify-center items-center m-4 gap-8">
+        <h3 class="font-bebas-neue text-5xl">
           KDO JSEM?
         </h3>
-        <div id="drop-down" class="grid grid-cols-1 m-4">
-          <div id="row-1" class="">
+        <div id="drop-down" class="flex flex-col gap-4 text-left">
+          <div id="row-1" class="rounded-sm shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
             Co mě žene?
           </div>
-          <div id="row-2" class="">
+          <div id="row-2" class="rounded-sm shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
             Životopis ve zkratce
           </div>
-          <div id="row-3" class="">
+          <div id="row-3" class="rounded-sm shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
             Magické číslo 4000
           </div>
         </div>
@@ -85,5 +85,5 @@
       </div>
     </div>
   </footer>
-  <script src="src/"></script>
+  <script src="src/main.js"></script>
 </html>
