faq still not centered

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         Dostupnější bydlení
       </div>
     </div>
-      <div id="faq" class="flex justify-center items-center m-4 gap-8">
-        <h3 class="font-bebas-neue text-5xl">
+      <div id="faq" class="grid grid-flow-col auto-cols-2 justify-center items-start w-full my-8 gap-8">
+        <h3 class="font-bebas-neue text-5xl p-2">
           KDO JSEM?
         </h3>
         <div id="drop-down" class="flex flex-col gap-4 text-left">
