--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="/src/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="src/main.js"></script>
     <title>Jan Marek</title>
   </head>
   <body class="w-full h-full flex flex-col bg-primary text-white">
@@ -58,9 +59,27 @@
         <h3 class="font-bebas-neue text-5xl p-2">
           KDO JSEM?
         </h3>
-        <div id="drop-down" class="flex flex-col gap-4 text-left">
-          <div id="row-1" class="rounded-sm shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
-            Co mě žene?
+        <div id="drop-down" class="flex flex-col gap-4 text-left w-full max-w-xl">
+          <div class="dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
+            <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer">
+              Co mě žene?
+            </button>
+            <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pl-5 pr-10 text-base">
+              <ul>
+                <li class="pt-2 pb-2">
+                  Jsem si naprosto jistý, že Češi nejsou horší, než Dánové nebo Nizozemci a můžeme být stejně úspěšní jako oni.
+                </li>
+                <li class="pt-2 pb-2">
+                  Frustruje mě, že přešlapujeme na místě a nenaplňujeme náš potenciál.
+                </li>
+                <li class="pt-2 pb-2">
+                  Poslanci z mého regionu jsou extra symbolem této stagnace. 
+                </li>
+                <li class="pt-2 pb-2">
+                  Je čas přestat tlachat a sebrat odvahu ke skutečným změnám.
+                </li>
+              </ul>
+            </div>
           </div>
           <div id="row-2" class="rounded-sm shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
             Životopis ve zkratce
@@ -85,5 +104,5 @@
       </div>
     </div>
   </footer>
-  <script src="src/main.js"></script>
+  
 </html>
