kdo jsem part drop downs content added

--- a/index.html
+++ b/index.html
@@ -81,11 +81,50 @@
               </ul>
             </div>
           </div>
-          <div id="row-2" class="rounded-sm shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
-            Životopis ve zkratce
+          <div class="dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
+            <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer">
+              Životopis ve zkratce
+            </button>
+            <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pl-5 pr-10 text-base">
+              <ul>
+                <li class="pt-2 pb-2">
+                  Po maturitě na břeclavském gymplu jsem nastoupil na právnickou fakultu Karlovy univerzity.
+                </li>
+                <li class="pt-2 pb-2">
+                  Ještě na střední jsem vedl firmu FreshTrash. Každé pondělí jsem prohrabal desítky kilo vyhozeného ovoce a zeleniny a poté s přáteli zachraňoval co šlo skrze naše „odpadové pekařství.“
+                </li>
+                <li class="pt-2 pb-2">
+                  Pracoval jsem v týmu zaměřeném na soutěžní právo v přední české advokátní kanceláři a byl tak u největších soutěžních případů. 
+                </li>
+                <li class="pt-2 pb-2">
+                  Zkušenosti mám i ze stáže na ministertsvu zahraničí nebo dluhové poradny.
+                </li>
+                <li class="pt-2 pb-2">
+                  Nyní pracuji na právním oddělení nadnárodní společnosti a věnuji se hlavně soutěžnímu právu.
+                </li>
+                <li class="pt-2 pb-2">
+                  Od roku 2022 jsem historicky nejmladším předsedou školské komise doma v Břeclavi.
+                </li>
+                <li class="pt-2 pb-2">
+                  Jsem z regionu vinohradů, ve volném čase mě tak najdete pracovat mezi řádky nebo pít výsledky s přáteli. Taky rád chodím na hospodský kvíz a exotickým hobby je studium islandštiny.
+                </li>
+              </ul>
+            </div>
           </div>
-          <div id="row-3" class="rounded-sm shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
-            Magické číslo 4000
+          <div class="dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
+            <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer">
+              Magické číslo 4000
+            </button>
+            <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pl-5 pr-10 text-base">
+              <ul>
+                <li class="pt-2 pb-2">
+                  Pokud jsem Vás třeba zaujal, a bude vás něco kolem 4000 můžeme to společně dát..
+                </li>
+                <li class="pt-2 pb-2">
+                  Přesně tolik „kroužků“ by mě totiž poslalo do Poslanecké sněmovny.
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
