tiles drop down fix

--- a/index.html
+++ b/index.html
@@ -41,47 +41,39 @@
     <h3 class="font-bebas-neue text-left text-5xl m-4">
       ZA CO BUDU BOJOVAT?
     </h3>
-    <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4">
-      <div id="col-1" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
-        <button class="dropdown-header w-full text-left text-lg hover:cursor-pointer">
+    <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4 lg:max-h-28 z-10">
+      <button id="col-1" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Moderní antimonopolní zákony
-        </button>
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
-          <p class="pt-2 pb-2">
+          <p class="pt-4">
             Živější konkurenční prostředí sníží ceny, zvýší kvalitu, rozšíří nabídku, zvýší bezpečnost a umožní novým firmám uspět. Konkurence také znamená méně moci velkých podniků nad politikou a tedy lepší demokracii.
           </p>
         </div>
-      </div>
-      <div id="col-2" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
-        <button class="dropdown-header w-full text-left text-lg hover:cursor-pointer">
+      </button>
+      <button id="col-2" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Přesčasy bez daně
-        </button>
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
-          <p class="pt-2 pb-2">
+          <p class="pt-4">
             Sestry, lékaři, hasiči, ošetřovatelky a další tvrdě a přesčas pracující profese si zaslouží vyšší ohodnocení. Zrušení daně z přesčasů jim přinese až desítky tisíc korun ročně navíc. 
           </p>
         </div>
-      </div>
-      <div id="col-3" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
-        <button class="dropdown-header w-full text-left text-lg hover:cursor-pointer">
+      </button>
+      <button id="col-3" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Školství pro měnící se svět
-        </button>
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
-          <p class="pt-2 pb-2">
+          <p class="pt-4">
             Maximální podpora předškolního vzdělávání. Výuka dovedností pro dynamický svět, ne pro AZ Kvíz. Dostupné všeobecné vzdělání i kvalitní na praxi založené praktické. Modernizace často nefunkčních bakalářských programů. 
           </p>
         </div>
-      </div>
-      <div id="col-4" class="object-cover rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-10 pr-10 bg-gradient-to-r from-tertiary to-secondary">
-        <button class="dropdown-header w-full text-left text-lg hover:cursor-pointer">
-        Dostupnější bydlení
-        </button>
+      </button>
+      <button id="col-4" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
+          Dostupnější bydlení
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
-          <p class="pt-2 pb-2">
+          <p class="pt-4">
             Osekání zbytečných norem, které prodražují výstavbu. Podpora výstavby soukromými developery i obecního bydlení. Konec spekulantů a prázdných bytů. 
           </p>
         </div>
-      </div>
+      </button>
     </div>
       <div id="faq" class="grid grid-flow-col auto-cols-2 justify-center items-start w-full my-8 gap-8">
         <h3 class="font-bebas-neue text-5xl p-2">
