faq drop-down fix

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h3 class="font-bebas-neue text-left text-5xl m-4">
       ZA CO BUDU BOJOVAT?
     </h3>
-    <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4 lg:max-h-28 z-10">
+    <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4 lg:max-h-28 lg:max-w-5/6 z-10 font-roboto">
       <button id="col-1" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Moderní antimonopolní zákony
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
@@ -79,12 +79,10 @@
         <h3 class="font-bebas-neue text-5xl p-2">
           KDO JSEM?
         </h3>
-        <div id="drop-down" class="flex flex-col gap-4 text-left w-full max-w-xl">
-          <div class="dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
-            <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer">
+        <div id="drop-down" class="flex flex-col gap-4 text-left w-full max-w-lg font-roboto">
+          <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
               Co mě žene?
-            </button>
-            <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pl-5 pr-10 text-base">
+            <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
               <ul>
                 <li class="pt-2 pb-2">
                   Jsem si naprosto jistý, že Češi nejsou horší, než Dánové nebo Nizozemci a můžeme být stejně úspěšní jako oni.
@@ -100,12 +98,10 @@
                 </li>
               </ul>
             </div>
-          </div>
-          <div class="dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
-            <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer">
+          </button>
+          <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
               Životopis ve zkratce
-            </button>
-            <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pl-5 pr-10 text-base">
+            <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
               <ul>
                 <li class="pt-2 pb-2">
                   Po maturitě na břeclavském gymplu jsem nastoupil na právnickou fakultu Karlovy univerzity.
@@ -130,12 +126,10 @@
                 </li>
               </ul>
             </div>
-          </div>
-          <div class="dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
-            <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer">
+          </button>
+          <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
               Magické číslo 4000
-            </button>
-            <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pl-5 pr-10 text-base">
+            <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
               <ul>
                 <li class="pt-2 pb-2">
                   Pokud jsem Vás třeba zaujal, a bude vás něco kolem 4000 můžeme to společně dát..
@@ -145,7 +139,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </button>
         </div>
       </div>
   </body>
