--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-cerne.svg" />
     <link href="/src/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="src/main.js"></script>
@@ -38,7 +38,8 @@
     <h2 class="font-bebas-neue text-center text-5xl m-4">
       TAK AKORÁT IDEALISTICKÝ, ABY NEZAPOMNĚL ODKUD PŘIŠEL A PRO KOHO TO DĚLÁ.
     </h2>
-    <h3 class="font-bebas-neue text-left text-5xl m-4">
+    <hr class="flex flex-col my-8 h-0.5 border-t-0 w-1/3 items-center bg-white"/>
+    <h3 class="font-bebas-neue text-center text-5xl m-4">
       ZA CO BUDU BOJOVAT?
     </h3>
     <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4 lg:max-h-28 lg:max-w-5/6 z-10 font-roboto">
@@ -142,18 +143,26 @@
           </button>
         </div>
       </div>
+      <div id="contact" class="flex justify-center items-center gap-8 m-4">
+        <h3 class="font-bebas-neue text-5xl p-2">
+          Napište mi
+        </h3>
+        <p class="font-roboto text-center">
+          sohajdosnemovny@gmail.com
+        </p>
+      </div>
   </body>
 
   <footer>
     <div id="bottom" class="grid grid-cols-3 items-center text-center m-4">
       <div class="">
-        pavlinaroznik
+        <a href="https://pavlina.roznik.cz/" target="_blank">pavlinaroznik</a>
       </div>
       <div class="flex justify-center">
-        <img src="/logo_inverse.png" alt="logo pirati" class="w-16 h-auto"/>
+        <a href="https://www.pirati.cz/" target="_blank"><img src="/logo_inverse.png" alt="logo pirati" class="w-16 h-auto"/></a>
       </div>
       <div class="">
-        Zadavatel/zpracovatel: Piráti
+        <a href="https://www.pirati.cz/" target="_blank">Zadavatel/zpracovatel: Piráti</a>
       </div>
     </div>
   </footer>
