centered faq and contact

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="flex justify-center m-4">
       <img class="w-[550px]" src="/letak-final.png" alt="political leaflet of a man standing">
     </div>
-    <h1 class="font-bebas-neue text-center text-6xl m-4">
+    <h1 class="font-bebas-neue text-center text-7xl m-4">
       ODVAHA KE ZMĚNĚ!
     </h1>
     <p class="font-roboto text-center m-4">
@@ -29,20 +29,20 @@
       <p class="font-roboto text-center m-4">
       Vše co potřebujeme, je odvaha ke změně.
     </p>
-    <h2 class="font-bebas-neue text-center text-5xl m-4">
+    <h2 class="font-bebas-neue text-center text-4xl m-4">
       MLADÝ. TVRDÝ. S TAHEM NA BRANKU.
     </h2>
-    <h2 class="font-bebas-neue text-center text-5xl m-4">
+    <h2 class="font-bebas-neue text-center text-4xl m-4">
       TAK AKORÁT PRAGMATICKÝ, ABY NĚCO OPRAVDU PROSADIL.
     </h2>
-    <h2 class="font-bebas-neue text-center text-5xl m-4">
+    <h2 class="font-bebas-neue text-center text-4xl m-4">
       TAK AKORÁT IDEALISTICKÝ, ABY NEZAPOMNĚL ODKUD PŘIŠEL A PRO KOHO TO DĚLÁ.
     </h2>
-    <hr class="flex flex-col my-8 h-0.5 border-t-0 w-1/3 items-center bg-white"/>
+    <hr class="flex flex-col my-8 h-0.5 border-t-0 w-1/2 self-center bg-white"/>
     <h3 class="font-bebas-neue text-center text-5xl m-4">
       ZA CO BUDU BOJOVAT?
     </h3>
-    <div id="tiles" class="grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4 lg:max-h-28 lg:max-w-5/6 z-10 font-roboto">
+    <div id="tiles" class="self-center grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4 lg:max-h-28 lg:max-w-5/6 z-10 font-roboto">
       <button id="col-1" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Moderní antimonopolní zákony
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
@@ -76,11 +76,11 @@
         </div>
       </button>
     </div>
-      <div id="faq" class="grid grid-flow-col auto-cols-2 justify-center items-start w-full my-8 gap-8">
-        <h3 class="font-bebas-neue text-5xl p-2">
+      <div id="faq" class="grid grid-cols-2 items-start w-full gap-8 my-8">
+        <h3 class="font-bebas-neue text-5xl justify-self-end p-2">
           KDO JSEM?
         </h3>
-        <div id="drop-down" class="flex flex-col gap-4 text-left w-full max-w-lg font-roboto">
+        <div id="drop-down" class="flex flex-col gap-4 text-left w-full max-w-lg justify-self-start font-roboto">
           <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
               Co mě žene?
             <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
@@ -143,14 +143,15 @@
           </button>
         </div>
       </div>
-      <div id="contact" class="flex justify-center items-center gap-8 m-4">
-        <h3 class="font-bebas-neue text-5xl p-2">
+      <div id="contact" class="grid grid-cols-2 gap-8 m-4">
+        <h3 class="font-bebas-neue text-5xl p-2 justify-self-end">
           Napište mi
         </h3>
-        <p class="font-roboto text-center">
+        <p class="font-roboto text-center flex items-center justify-self-start">
           sohajdosnemovny@gmail.com
         </p>
       </div>
+      <hr class="flex flex-col my-8 h-0.5 border-t-0 w-1/2 self-center bg-white"/>
   </body>
 
   <footer>
