--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="cs">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-cerne.svg" />
-    <link href="/src/style.css" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="logo-cerne.svg" />
+    <link href="src/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="src/main.js"></script>
     <title>Jan Marek</title>
@@ -13,12 +13,12 @@
       Jan Marek
     </div>
     <div class="flex justify-center items-center w-full h-full bg-black">
-      <video controls poster="/video-snap.png" width="960" height="720" controlsList="nodownload">
+      <video controls poster="video-snap.png" width="960" height="720" controlsList="nodownload">
         <source src="video.mp4" type="video/mp4">
       </video>
     </div>
     <div class="flex justify-center m-4">
-      <img class="w-[550px]" src="/letak-final.png" alt="political leaflet of a man standing">
+      <img class="w-[550px]" src="letak-final.png" alt="political leaflet of a man standing">
     </div>
     <h1 class="font-bebas-neue text-center text-7xl m-4">
       ODVAHA KE ZMĚNĚ!
