--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="logo-cerne.svg" />
     <link href="src/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="src/main.js"></script>
+    <script defer type="module" src="src/main.js"></script>
     <title>Jan Marek</title>
   </head>
   <body class="w-full h-full flex flex-col bg-primary text-white">
