--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       ZA CO BUDU BOJOVAT?
     </h3>
     <div id="tiles" class="self-center grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4 lg:max-h-28 lg:max-w-5/6 z-10 font-roboto">
-      <button id="col-1" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
+      <button id="col-1" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Moderní antimonopolní zákony
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
           <p class="pt-4">
@@ -51,7 +51,7 @@
           </p>
         </div>
       </button>
-      <button id="col-2" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
+      <button id="col-2" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Přesčasy bez daně
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
           <p class="pt-4">
@@ -59,7 +59,7 @@
           </p>
         </div>
       </button>
-      <button id="col-3" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
+      <button id="col-3" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Školství pro měnící se svět
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
           <p class="pt-4">
@@ -67,7 +67,7 @@
           </p>
         </div>
       </button>
-      <button id="col-4" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
+      <button id="col-4" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
           Dostupnější bydlení
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
           <p class="pt-4">
@@ -80,7 +80,7 @@
         <h3 class="font-bebas-neue text-5xl justify-self-end p-2">
           KDO JSEM?
         </h3>
-        <div id="drop-down" class="flex flex-col gap-4 text-left w-full max-w-lg justify-self-start font-roboto">
+        <div id="drop-down" class="flex flex-col gap-4 text-left w-full max-w-52 justify-self-start font-roboto md:max-w-5/6 lg:max-w-5/6">
           <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
               Co mě žene?
             <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
