--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
         </div>
       </button>
     </div>
-      <div id="faq" class="grid grid-cols-2 items-start w-full gap-8 my-8">
+      <div id="faq" class="grid grid-cols-2 items-start w-full gap-8 my-8 p-4 lg:p-0">
         <h3 class="font-bebas-neue text-5xl justify-self-end p-2">
           KDO JSEM?
         </h3>
-        <div id="drop-down" class="flex flex-col gap-4 text-left w-full max-w-52 justify-self-start font-roboto md:max-w-5/6 lg:max-w-5/6">
+        <div id="drop-down" class="flex flex-col gap-4 text-left w-full justify-self-start font-roboto md:max-w-full lg:max-w-5/6">
           <button class="dropdown-header w-full text-left pt-5 pl-5 pr-10 pb-5 text-lg hover:cursor-pointer dropdown-item rounded-sm shadow-xl shadow-white/20 bg-gradient-to-r from-tertiary to-secondary">
               Co mě žene?
             <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
