--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </div>
       </button>
     </div>
-      <div id="faq" class="grid grid-cols-2 items-start w-full gap-8 my-8 p-4 lg:p-0">
-        <h3 class="font-bebas-neue text-5xl justify-self-end p-2">
+      <div id="faq" class="grid grid-cols-1 md:grid-cols-2 items-start w-full gap-8 my-8 p-4 lg:p-0">
+        <h3 class="font-bebas-neue text-5xl justify-self-center md:justify-self-end p-2">
           KDO JSEM?
         </h3>
         <div id="drop-down" class="flex flex-col gap-4 text-left w-full justify-self-start font-roboto md:max-w-full lg:max-w-5/6">
@@ -85,7 +85,7 @@
               Co mě žene?
             <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
               <ul>
-                <li class="pt-2 pb-2">
+                <li class="pt-4 pb-2">
                   Jsem si naprosto jistý, že Češi nejsou horší, než Dánové nebo Nizozemci a můžeme být stejně úspěšní jako oni.
                 </li>
                 <li class="pt-2 pb-2">
@@ -104,7 +104,7 @@
               Životopis ve zkratce
             <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
               <ul>
-                <li class="pt-2 pb-2">
+                <li class="pt-4 pb-2">
                   Po maturitě na břeclavském gymplu jsem nastoupil na právnickou fakultu Karlovy univerzity.
                 </li>
                 <li class="pt-2 pb-2">
@@ -132,7 +132,7 @@
               Magické číslo 4000
             <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
               <ul>
-                <li class="pt-2 pb-2">
+                <li class="pt-4 pb-2">
                   Pokud jsem Vás třeba zaujal, a bude vás něco kolem 4000 můžeme to společně dát..
                 </li>
                 <li class="pt-2 pb-2">
@@ -143,11 +143,11 @@
           </button>
         </div>
       </div>
-      <div id="contact" class="grid grid-cols-2 gap-8 m-4">
-        <h3 class="font-bebas-neue text-5xl p-2 justify-self-end">
+      <div id="contact" class="grid grid-cols-1 md:grid-cols-2 gap-8 m-4">
+        <h3 class="font-bebas-neue text-5xl p-2 justify-self-center md:justify-self-end">
           Napište mi
         </h3>
-        <p class="font-roboto text-center flex items-center justify-self-start">
+        <p class="font-roboto text-center flex items-center justify-self-center md:justify-self-start">
           sohajdosnemovny@gmail.com
         </p>
       </div>
@@ -155,7 +155,7 @@
   </body>
 
   <footer>
-    <div id="bottom" class="grid grid-cols-3 items-center text-center m-4">
+    <div id="links" class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-0 items-center text-center m-4">
       <div class="">
         <a href="https://pavlina.roznik.cz/" target="_blank">pavlinaroznik</a>
       </div>
