tiles mobile sizing fix

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       ZA CO BUDU BOJOVAT?
     </h3>
     <div id="tiles" class="self-center grid grid-cols-1 md:grid-cols-4 gap-4 justify-start text-left m-4 lg:max-h-28 lg:max-w-5/6 z-10 font-roboto">
-      <button id="col-1" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
+      <button id="col-1" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-5 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Moderní antimonopolní zákony
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
           <p class="pt-4">
@@ -51,7 +51,7 @@
           </p>
         </div>
       </button>
-      <button id="col-2" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
+      <button id="col-2" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-5 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Přesčasy bez daně
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
           <p class="pt-4">
@@ -59,7 +59,7 @@
           </p>
         </div>
       </button>
-      <button id="col-3" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
+      <button id="col-3" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-5 pr-10 bg-gradient-to-r from-tertiary to-secondary">
         Školství pro měnící se svět
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
           <p class="pt-4">
@@ -67,7 +67,7 @@
           </p>
         </div>
       </button>
-      <button id="col-4" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min min-h-28 md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-8 pr-10 bg-gradient-to-r from-tertiary to-secondary">
+      <button id="col-4" class="dropdown-header flex flex-col items-start w-full text-left text-lg hover:cursor-pointer object-cover h-min md:min-h-36 xl:min-h-28 rounded-sm size-full shadow-xl shadow-white/20 pt-5 pl-5 pb-5 pr-10 bg-gradient-to-r from-tertiary to-secondary">
           Dostupnější bydlení
         <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out text-base">
           <p class="pt-4">
@@ -133,7 +133,7 @@
             <div class="dropdown-content overflow-hidden max-h-0 transition-all duration-500 ease-in-out pr-10 text-base">
               <ul>
                 <li class="pt-4 pb-2">
-                  Pokud jsem Vás třeba zaujal, a bude vás něco kolem 4000 můžeme to společně dát..
+                  Pokud jsem Vás třeba zaujal, a bude vás něco kolem 4000 můžeme to společně dát...
                 </li>
                 <li class="pt-2 pb-2">
                   Přesně tolik „kroužků“ by mě totiž poslalo do Poslanecké sněmovny.
