--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
   <footer>
     <div id="links" class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-0 items-center text-center m-4">
       <div class="">
-        <a href="https://pavlina.roznik.cz/" target="_blank">pavlinaroznik</a>
+        <a href="https://www.pirati.cz/" target="_blank">Zadavatel: Piráti</a>
       </div>
       <div class="flex justify-center">
         <a href="https://www.pirati.cz/" target="_blank"><img src="/logo_inverse.png" alt="logo pirati" class="w-16 h-auto"/></a>
       </div>
       <div class="">
-        <a href="https://www.pirati.cz/" target="_blank">Zadavatel/zpracovatel: Piráti</a>
+        <a href="https://pavlina.roznik.cz/" target="_blank">Zpracovatel: Pavlína Rožník</a>
       </div>
     </div>
   </footer>
